initial import of quarkus implementation